--- a/src/Components/_blocks/Main/Main.module.css
+++ b/src/Components/_blocks/Main/Main.module.css
@@ -3,12 +3,55 @@ main {
     width: auto;
     height: auto;
     min-height: 900px;
-    background-color: rgb(75, 72, 68);
+    background-color: rgb(20, 20, 20);
     border-radius: 20px;
-
+    box-shadow: 0px 1px 10px rgb(17, 17, 17);
 }
 
-@media only screen and (min-width:10px) and (max-width:1365px) {
+
+.inp {
+    background: inherit;
+    outline: none;
+    border: none;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    border-radius: 17px;
+    padding: 10px;
+    margin-top: 15px;
+    margin-left: 10px;
+    max-width: 200px;
+    min-width: 100px;
+    box-shadow:0px 0px 3px rgb(255, 255, 255);
+}
+
+
+.param_block {
+    width: 100%;
+    min-height: 70px;
+    
+}
+
+.car {
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    padding: 10px;
+    border: 2px solid white;
+    max-width: 200px;
+    border-radius: 20px;
+    margin-top: 10px;
+    
+}
+
+.listed {
+    display: flex;
+    flex-direction: column;
+    min-width: 100%;
+    align-items: center;
+}
+
+@media only screen and (min-width:10px) and (max-width:1059px) {
     main {
         min-width: 100%;
         border-radius:0;
@@ -16,3 +59,9 @@ main {
     }
 }
 
+
+@media only screen and (max-width:390px) {
+    .inp {
+        width: 150px;
+    }
+}
